Fix footer's alignment

--- a/app/styles/app/layouts/footer.sass
+++ b/app/styles/app/layouts/footer.sass
@@ -30,7 +30,6 @@ footer
     margin-top: -204px
     min-height: 204px
 
-
 footer h3
   font-size   : 15px
   margin  : 0 0 10px 0
@@ -42,6 +41,9 @@ footer h3
 footer .row p
   display : inline-block
   margin  : 0
+
+footer .row
+  max-width: 1024px
 
 footer .row ul,
 footer .row li
